logs/decocare.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Compiling './bin/mm-bolus.py'...
***   File "./bin/mm-bolus.py", line 40
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mm-decode-history-page.py'...
***   File "./bin/mm-decode-history-page.py", line 65
    print "found %s nulls" % len(nulls)
                         ^
SyntaxError: invalid syntax

Compiling './bin/mm-latest.py'...
***   File "./bin/mm-latest.py", line 122
    print "```json"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mm-press-key.py'...
Compiling './bin/mm-send-comm.py'...
Compiling './bin/mm-set-rtc.py'...
***   File "./bin/mm-set-rtc.py", line 62
    print "```json"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mm-set-suspend.py'...
Compiling './bin/mm-temp-basals.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/decocare'...
Listing './lib/python3.5/site-packages/decocare/cgm'...
Compiling './lib/python3.5/site-packages/decocare/cgm/__init__.py'...
***   File "./lib/python3.5/site-packages/decocare/cgm/__init__.py", line 68
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/decocare/commands.py'...
***   File "./lib/python3.5/site-packages/decocare/commands.py", line 1359
    normal = { 03: 'normal' }
                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/decocare/download.py'...
***   File "./lib/python3.5/site-packages/decocare/download.py", line 70
    print "usage:\n%s <port> <serial>, eg /dev/ttyUSB0 208850" % sys.argv[0]
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/decocare/etc'...
Compiling './lib/python3.5/site-packages/decocare/fuser.py'...
***   File "./lib/python3.5/site-packages/decocare/fuser.py", line 18
    print in_use(candidate)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/decocare/helpers'...
Compiling './lib/python3.5/site-packages/decocare/helpers/cli.py'...
***   File "./lib/python3.5/site-packages/decocare/helpers/cli.py", line 119
    print "##### skipping prelude"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/decocare/helpers/messages.py'...
***   File "./lib/python3.5/site-packages/decocare/helpers/messages.py", line 39
    print Other, kwds
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/decocare/history.py'...
***   File "./lib/python3.5/site-packages/decocare/history.py", line 107
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/decocare/models'...
Listing './lib/python3.5/site-packages/decocare/records'...
Compiling './lib/python3.5/site-packages/decocare/records/tests.py'...
***   File "./lib/python3.5/site-packages/decocare/records/tests.py", line 640
    print str(rec)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/decocare/records/times.py'...
***   File "./lib/python3.5/site-packages/decocare/records/times.py", line 242
    except NotADate, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/decocare/scan.py'...
***   File "./lib/python3.5/site-packages/decocare/scan.py", line 21
    print candidate
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/decocare/session.py'...
***   File "./lib/python3.5/site-packages/decocare/session.py", line 43
    except BadDeviceCommError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/decocare/stick.py'...
***   File "./lib/python3.5/site-packages/decocare/stick.py", line 93
    rf_table  = { 001: '868.35Mhz' ,
                    ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/decocare-0.0.30.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
